add_subdirectory( test.performance.api.parse_format )
add_subdirectory( test.performance.boost.karma )
add_subdirectory( test.performance.decimal_integer )
add_subdirectory( test.performance.hexadecimal_integer )
add_subdirectory( test.performance.name_age_height )
add_subdirectory( test.performance.one_integer )
add_subdirectory( test.performance.one_pointer )
add_subdirectory( test.performance.overload.ex.1 )
add_subdirectory( test.performance.scenario1 )
add_subdirectory( test.performance.ten_strings_twice )
add_subdirectory( test.performance.three_strings_one_integer )
