add_subdirectory( test.scratch.FILE )
add_subdirectory( test.scratch.format_alignment )
add_subdirectory( test.scratch.format_defects )
add_subdirectory( test.scratch.format_iterator )
add_subdirectory( test.scratch.implicit_integer )
add_subdirectory( test.scratch.inserter.integer )
add_subdirectory( test.scratch.inserter.real )
add_subdirectory( test.scratch.overload.3.BSTR_out_parameter )
add_subdirectory( test.scratch.sink.auto_buffer )
add_subdirectory( test.scratch.sinks.shim_string )
add_subdirectory( test.scratch.sink.vectored_file )
add_subdirectory( test.scratch.sink.WindowsConsole )
add_subdirectory( test.scratch.sink.WindowsMessageBox )
add_subdirectory( test.scratch.speech )
